added some audio...sort of

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           else  {
             guessLetter = guessLetter.toUpperCase();
             console.log ("Try a different letter");
-             html =
+            html =
               "<br>"+
               "<p>You're in a Japanese Gameshow</p>" +
               "<p>Wins: " + wins + "</p>" +
@@ -251,6 +251,7 @@
           losses = losses + 1;
           guesses = 10;
           pressContinueL = "You lost! Guess your next letter to continue...";
+          window.open('http://www.latlmes.com/world/your-sensational-news-article-headline-1');
           usedLetters = [];
           unusedLetters = unusedLetters = ["A", "B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z"];
           randomWord();
